// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home failure 1`] = `
<div>
  <div>
    "Error"
  </div>
</div>
`;

exports[`Home loading 1`] = `
<div>
  <b>
    Loading...
  </b>
</div>
`;

exports[`Home success 1`] = `
<div>
  <div
    class="sc-bdvvaa cvCJhh"
  >
    <div>
      <h2>
        Blue Blaze Irregulars
      </h2>
      <ul />
    </div>
  </div>
</div>
`;
